<resources>
    <string name="app_name">Tetris</string>
    <string name="rotate">Rotate</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="tetris">Tetris</string>
    <string name="play">Play</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="quit">Quit</string>
    <string name="background_description">Background image</string>
    <string name="lost">You lost</string>
    <string name="main_menu">Main menu</string>
    <string name="unknown_score">Unknown score</string>
    <string name="reset">Reset</string>
    <string name="score_show">Score : %d</string>
    <string name="score">Score</string>
    <string name="highest_score">HIGHEST SCORE</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="grid_size">Grid size</string>
    <string name="player">Player</string>
    <string name="long_username">The username must not be more than 14 characters long</string>
    <string name="controls_description">Touch the left part of the screen to move the tetromino left, and the right part to move the tetromino right.\nYou can touch the middle bottom part of the screen to rotate it, and maintain touch the middle top part of the screen to make it fall more quickly. You can swipe down to hard drop the tetromino.\n\nClick anywhere on the screen to start !</string>


    <string-array name="gridsize_spinner" translatable="false">
        <item>8 x 12</item>
        <item>11 x 16</item>
        <item>15 x 22</item>
        <item>18 x 28</item>
    </string-array>

</resources>
