<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_description"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="128dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:fontFamily="@font/press_start"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play" />

        <Button
            android:id="@+id/highscores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/highscores" />

        <Button
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>