<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_description"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

    </FrameLayout>

    <TextView
        android:id="@+id/title"
        style="@style/textview_style"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/settings"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_title"
        style="@style/textview_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="8dp"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/username"
        style="@style/default_style"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="64dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/press_start_2p"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingTop="16dp"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/gridsize_title"
        style="@style/textview_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/grid_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Spinner
        android:id="@+id/gridsize"
        style="@style/spinner_style"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridsize_title" />

    <Button
        android:id="@+id/save"
        style="@style/default_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/press_start_2p"
        android:paddingTop="16dp"
        android:text="@string/save"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridsize" />

    <Button
        android:id="@+id/cancel"
        style="@style/default_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/press_start_2p"
        android:paddingTop="16dp"
        android:text="@string/cancel"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save" />

</android.support.constraint.ConstraintLayout>